evolution in html files

--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Clínica Olimpo</title>
+    <meta
+      name="description"
+      content="Clínica de Nutrologia - Bem-estar, Performance e Emagrecimento."
+    />
+
+    <!--stylesheets css-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./styles/reset.css"
+    />
+    <link rel="stylesheet" type="text/css" media="screen" href="./styles.css" />
+
+    <!--external fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!--internal javascript-->
+    <script type="module" src="./main.js"></script>
   </head>
+
   <body>
     <div id="app"></div>
-
-    <script src="main.js"></script>
   </body>
 </html>
