--- a/client/pages/uploads.html
+++ b/client/pages/uploads.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>File Upload</title>
-  </head>
-  <body>
-    <h1>Upload a File</h1>
-    <form id="uploadForm" enctype="multipart/form-data">
-      <input type="file" id="fileInput" name="file" />
-      <button type="submit">Upload</button>
-    </form>
+<form id="uploadForm" enctype="multipart/form-data">
+  <h2>Carregar Arquivo</h2>
+  <input type="file" id="fileInput" name="file" />
+  <button type="submit">Carregar</button>
+</form>
 
-    <script src="../modules/uploads.js"></script>
-  </body>
-</html>
+<!--internal javascript-->
+<script src="../modules/uploads.js"></script>
