--- a/client/pages/authentication.html
+++ b/client/pages/authentication.html
@@ -1,46 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script
-      async
-      defer
-      crossorigin="anonymous"
-      src="https://connect.facebook.net/en_US/sdk.js"
-    ></script>
-    <link rel="stylesheet" href="../styles/authentication.css" />
-    <title>Authentication</title>
-  </head>
-  <body>
-    <h1>Login</h1>
-    <form id="login-form">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required />
-      <br />
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required />
-      <br />
-      <button type="submit">Login</button>
-    </form>
+<div id="message"></div>
 
-    <div class="login-container">
-      <h2>Login</h2>
-      <div
-        id="google-login-btn"
-        class="g-signin2"
-        data-onsuccess="onGoogleSignIn"
-      ></div>
-      <div id="facebook-login-btn" onclick="facebookLogin()">
-        Login with Facebook
-      </div>
-      <input type="email" id="email" placeholder="Email" />
-      <input type="text" id="phone" placeholder="Phone Number" />
-      <button onclick="emailPhoneLogin()">Login</button>
+<form id="login-form" onsubmit="emailPhoneLogin()">
+  <div class="login-container">
+    <h2>Login</h2>
+    <div
+      id="google-login-btn"
+      class="g-signin2"
+      data-onsuccess="onGoogleSignIn"
+    ></div>
+    <div id="facebook-login-btn" onclick="facebookLogin()">
+      Login com Facebook
     </div>
+    <label for="email">E-mail:</label>
+    <input type="email" id="email" placeholder="E-mail" />
+    <label for="phone">Telefone:</label>
+    <input type="text" id="phone" placeholder="Telefone" />
+    <button type="submit">Entrar</button>
+  </div>
+</form>
 
-    <div id="message"></div>
-    <script src="../modules/authentication.js"></script>
-  </body>
-</html>
+<!-- external scripts -->
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<script
+  async
+  defer
+  crossorigin="anonymous"
+  src="https://connect.facebook.net/en_US/sdk.js"
+></script>
+
+<!--internal javascript-->
+<script type="module" src="../modules/authentication.js"></script>
