adjustments in index

--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,28 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <header>
+      <nav>
+        <div>Logo</div>
+        <button>A Clínica Olimpo</button>
+        <button>Especialidades</button>
+        <button>Agendamentos</button>
+        <button>Área do Paciente</button>
+        <button>Contato</button>
+      </nav>
+    </header>
+    <main>
+      <div id="app"></div>
+    </main>
+    <footer>
+      <div>Logo</div>
+      <div>Contato: +55 (31) 9 9603-0423</div>
+      <div>
+        <ul>
+          <li>Termos e Condições</li>
+          <li>Política de Cookies</li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
