divs in the index file

--- a/client/index.html
+++ b/client/index.html
@@ -33,10 +33,27 @@
 
   <body>
     <header>
+      <div>
+        <a href="#" onclick="loadContent('./pages/home.html')">Logo</a>
+      </div>
+      <div>
+        <ul>
+          <li>
+            <a href="#" onclick="loadContent('./pages/registration.html')"
+              >Cadastrar</a
+            >
+          </li>
+          <li>
+            <a href="#" onclick="loadContent('./pages/authentication.html')"
+              >Entrar</a
+            >
+          </li>
+          <li>
+            <a href="#" onclick="loadContent('./pages/cart.html')">Carrinho</a>
+          </li>
+        </ul>
+      </div>
       <nav>
-        <div>
-          <a href="#" onclick="loadContent('./pages/home.html')">Logo</a>
-        </div>
         <ul>
           <li>
             <a href="#" onclick="loadContent('./pages/home.html')">Sobre</a>
@@ -62,21 +79,6 @@
             >
           </li>
         </ul>
-        <ul>
-          <li>
-            <a href="#" onclick="loadContent('./pages/registration.html')"
-              >Cadastrar</a
-            >
-          </li>
-          <li>
-            <a href="#" onclick="loadContent('./pages/authentication.html')"
-              >Entrar</a
-            >
-          </li>
-          <li>
-            <a href="#" onclick="loadContent('./pages/cart.html')">Carrinho</a>
-          </li>
-        </ul>
       </nav>
     </header>
     <main id="content">
@@ -86,8 +88,19 @@
       <div>
         <a href="#" onclick="loadContent('./pages/home.html')">Logo</a>
       </div>
-      <div>Telefone: +55 (31) 9 9603-0423</div>
-      <div>E-mail: contato@clinicaolimpo.com</div>
+      <div>
+        <ul>
+          <li>
+            Contatos:
+          </li>
+          <li>
+            Telefone: +55 (31) 9 9603-0423
+          </li>
+          <li>
+            E-mail: contato@clinicaolimpo.com
+          </li>
+        </ul>
+      </div>
       <div>
         <ul>
           <li>
