--- a/client/index.html
+++ b/client/index.html
@@ -26,9 +26,6 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
-    <!--internal javascript-->
-    <script type="module" src="./main.js"></script>
   </head>
 
   <body>
@@ -37,49 +34,59 @@
         <a href="#" onclick="loadContent('./pages/home.html')">Logo</a>
       </div>
       <div>
-        <ul>
-          <li>
-            <a href="#" onclick="loadContent('./pages/registration.html')"
-              >Cadastrar</a
-            >
-          </li>
-          <li>
-            <a href="#" onclick="loadContent('./pages/authentication.html')"
-              >Entrar</a
-            >
-          </li>
-          <li>
-            <a href="#" onclick="loadContent('./pages/cart.html')">Carrinho</a>
-          </li>
-        </ul>
+        <div>
+          <ul>
+            <li>
+              <a href="#" onclick="loadContent('./pages/registration.html')"
+                >Cadastrar</a
+              >
+            </li>
+
+            <li>
+              <a href="#" onclick="loadContent('./pages/authentication.html')"
+                >Entrar</a
+              >
+            </li>
+            <li>
+              <a href="#" onclick="loadContent('./pages/profile.html')"
+                >Usuário</a
+              >
+            </li>
+            <li>
+              <a href="#" onclick="loadContent('./pages/cart.html')"
+                >Carrinho</a
+              >
+            </li>
+          </ul>
+        </div>
+        <nav>
+          <ul>
+            <li>
+              <a href="#" onclick="loadContent('./pages/home.html')">Sobre</a>
+            </li>
+            <li>
+              <a href="#" onclick="loadContent('./pages/specialties.html')"
+                >Especialidades</a
+              >
+            </li>
+            <li>
+              <a href="#" onclick="loadContent('./pages/schedule.html')"
+                >Agendamentos</a
+              >
+            </li>
+            <li>
+              <a href="#" onclick="loadContent('./pages/files.html')"
+                >Documentos</a
+              >
+            </li>
+            <li>
+              <a href="#" onclick="loadContent('./pages/contact.html')"
+                >Contatos</a
+              >
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul>
-          <li>
-            <a href="#" onclick="loadContent('./pages/home.html')">Sobre</a>
-          </li>
-          <li>
-            <a href="#" onclick="loadContent('./pages/specialties.html')"
-              >Especialidades</a
-            >
-          </li>
-          <li>
-            <a href="#" onclick="loadContent('./pages/schedule.html')"
-              >Agendamentos</a
-            >
-          </li>
-          <li>
-            <a href="#" onclick="loadContent('./pages/files.html')"
-              >Documentos</a
-            >
-          </li>
-          <li>
-            <a href="#" onclick="loadContent('./pages/contact.html')"
-              >Contatos</a
-            >
-          </li>
-        </ul>
-      </nav>
     </header>
     <main id="content">
       <!-- Automatic load content here -->
@@ -90,15 +97,9 @@
       </div>
       <div>
         <ul>
-          <li>
-            Contatos:
-          </li>
-          <li>
-            Telefone: +55 (31) 9 9603-0423
-          </li>
-          <li>
-            E-mail: contato@clinicaolimpo.com
-          </li>
+          <li>Contatos:</li>
+          <li>Telefone: +55 (31) 9 9603-0423</li>
+          <li>E-mail: contato@clinicaolimpo.com</li>
         </ul>
       </div>
       <div>
@@ -126,8 +127,9 @@
         </p>
         <button id="acceptCookies">Accept</button>
       </div>
-
-      <script src="./modules/cookie-consent.js"></script>
     </footer>
+    <!--internal javascript-->
+    <script src="./main.js"></script>
+    <script src="./modules/cookie-consent.js"></script>
   </body>
 </html>
