--- a/client/pages/terms.html
+++ b/client/pages/terms.html
@@ -1,13 +1,13 @@
 <h1>Termos e Condições</h1>
 
-<h3>Effective Date: 01 de Junho de 2024</h3>
+<h3>Última atualização: 01 de Junho de 2024</h3>
 
 <p>
   Bem-vindo(a) à <b>Clínica Olimpo!</b> Por favor leia estes Termos e Condições
-  com atenção antes de continuar utilizando o website. Ao acessar ou utilizar os
-  nossos serviços, você concorda em estar vinculados a estes Termos e Condições.
-  Os materiais contidos neste site são protegidos pelas leis de direitos
-  autorais e marcas comerciais aplicáveis.
+  com atenção antes de continuar utilizando nossos serviços e nosso website. Ao
+  acessar o site ou utilizar os nossos serviços, você concorda em estar
+  vinculados a estes Termos e Condições. Os materiais contidos neste site são
+  protegidos pelas leis de direitos autorais e marcas comerciais aplicáveis.
 </p>
 
 <h2>1. Introdução</h2>
@@ -17,7 +17,108 @@
   www.clinicaolimpo.com e quaisquer serviços providos pela Clínica Olimpo.
 </p>
 
-<h2>2. Captura de Dados</h2>
+<h2>2. Consultas</h2>
+
+<p>Nós fornecemos dois tipos de consultas e exames:</p>
+
+<ul>
+  <li>
+    Consulta/Exame Online - O serviço é oferecido através de vídeoconferência,
+    telefone ou outros meios digitais, através de plataformas de nossa escolha
+    que serão informadas previamente às consultas e exames agendados. Este tipo
+    de serviço é oferecido sem nenhum ou com o mínimo de prejuízo possível entre
+    os nossos profissionais e os usuários. Nestes casos, o usuário é responsável
+    por seguir as instruções de acesso e se conectar no dia e horário marcados;
+  </li>
+  <li>
+    Consulta/Exame Presencial - Os serviço é oferecido nas localidades em que
+    estamos presentes. Nestes casos, o usuário é responsável por estar presente
+    fisicamente no local, dia e horário marcados.
+  </li>
+</ul>
+
+<h2>3. Agendamentos</h2>
+
+<p>
+  Os agendamentos podem ser realizados através do nosso website, por telefone
+  com nossos atendentes, pessoalmente na nossa clínica ou através de outros
+  meios de comunicação que fazemos disponíveis, como Whatsapp ou e-mail.
+</p>
+
+<p>
+  Seja qual for o meio de agendamento optado pelo usuário, o mesmo só será
+  confirmado mediante pagamento prévio aprovado relativo à tarifa do serviço
+  agendado.
+</p>
+
+<p>
+  Ao realizar o agendamento dos serviços, o usuário se compromete ao cumprimento
+  e pontualidade no local (ou virtual), dia e horário acordados, sob pena de não
+  atendimento e sem reembolso dos valores já pagos ou pagamentos futuros
+  acordados. Qualquer cancelamento e reembolso seguirá rigorosamente o item
+  relativo ao tema no presente termo.
+</p>
+
+<h2>4. Taxas e Pagamentos</h2>
+
+<p>
+  O fornecimento dos nossos serviços são vinculados ao pagamento prévio das
+  taxas pré-estabelecidas e disponíveis de forma prévia à aquisição dos nossos
+  serviços.
+</p>
+
+<p>
+  No reservamos ao direito de atualizar as taxas dos serviços listados no nosso
+  website e outros meios de comunicação sem aviso prévio.
+</p>
+
+<h2>5. Política de Cancelamento e Reembolso</h2>
+
+<p>
+  Cancelamentos apenas serão aceitos com prazo igual ou anterior a 2 dias úteis
+  antes do dia agendado. Independente se a consulta é Online ou Presencial. O
+  aviso do cancelamento deverá ser feito pelos meios de comunicação disponíveis,
+  com nossa confirmação expressa formal.
+</p>
+
+<p>
+  Em caso de cancelamento dentro do prazo estabelecido, os valores pagos não
+  serão ressarcidos, mas serão disponibilizados como crédito para que o usuário
+  reagende o serviço solicitado. Neste caso, cabe ao usuário realizar novamente
+  o agendamento pelos meios disponíveis.
+</p>
+
+<p>
+  Nos reservamos ao direito de cancelamento por qualquer motivo, sem reembolso
+  de valores já pagos, mas com disponiblização de crédito para reagendamento do
+  serviço, com o nosso compromisso de seguir o mesmo prazo mencionado acima, a
+  menos que tal prazo não seja possível por motivos de força maior.
+</p>
+
+<p>
+  Em caso de cancelamento por nossa parte, caso o usuário não tenha interesse no
+  reagendamento, este poderá exigir o reembolso dos valores pagos previamente
+  pelo serviço. Este reembolso, após solicitado, será realizado por
+  transferência bancária dentro do prazo de 2 dias úteis.
+</p>
+
+<h2>6. Informações Médicas</h2>
+
+<p>
+  Usuários podem acessar todos os seus resultados de exames e dados médicos
+  através do seu acesso seguro pessoal ao nosso website. Informações que
+  porventura não estejam disponíveis, deverão ser requisitadas pelos nossos
+  meios de comunicação disponíveis.
+</p>
+
+<p>
+  Informações prestadas online de forma não individualizada, assim como
+  informações individuais direcionadas sem estarem acompanhadas da consulta
+  médica não podem ser consideradas como substitutas às orientações médicas. As
+  consultas são necessárias para qualquer orientação, diagnóstico e tratamento.
+</p>
+
+<h2>7. Captura de Dados</h2>
 
 <p>
   Nós coletamos dados pessoais de usuários registrados para prover e melhorar
@@ -39,7 +140,7 @@
   </li>
 </ul>
 
-<h2>3. Utilização dos Dados</h2>
+<h2>8. Utilização dos Dados</h2>
 
 <p>Seus dados serão usados para os seguintes propósitos:</p>
 
@@ -64,7 +165,7 @@
   <li>Para detectar, prevenir e endereçar quaisquer problemas técnicos.</li>
 </ul>
 
-<h2>4. Compartilhamento de Dados</h2>
+<h2>9. Compartilhamento de Dados</h2>
 
 <p>
   Nós não iremos compartilhar seus dados pessoais com partes terceiras, com
@@ -84,7 +185,7 @@
   </li>
 </ul>
 
-<h2>5. Segurança de Dados</h2>
+<h2>10. Segurança de Dados</h2>
 
 <p>
   Nós implementamos medidas técnicas e organizacionais apropriadas para garantir
@@ -93,7 +194,12 @@
   pela internet ou método de armazenamento eletrônico de dados é 100% seguro.
 </p>
 
-<h2>6. Direitos do Usuário</h2>
+<p>
+  O usuário é responsável por manter o segredo das suas credenciais de acesso,
+  assim como a divulgação dos dados provenientes do seu acesso.
+</p>
+
+<h2>11. Direitos do Usuário do Sistema</h2>
 
 <p>
   Conforme a LGPD (Lei Geral de Proteção de Dados), Lei nº 13.853 de 2019, você
@@ -125,7 +231,7 @@
   e-mail contato@clinicaolimpo.com.
 </p>
 
-<h2>7. Cookies</h2>
+<h2>12. Cookies</h2>
 
 <p>
   Nosso website faz uso de cookies para melhorar a sua experiência de usuário.
@@ -133,22 +239,64 @@
   nossa Política de Cookies.
 </p>
 
-<h2>8. Mudanças Nestes Termos</h2>
+<h2>13. Veracidade de Informações</h2>
+
+<p>
+  O usuário é o responsável pela veracidade, precisão, exatidão e atualização
+  dos dados e informações providos através do website ou qualquer outro meio de
+  contato que sejam necessários para a prestação de serviço, sendo o usuário
+  responsável por quaisquer erros ou equívocos na prestação dos serviços em
+  virtude de erros ou omissões dos dados enviados pelo usuário.
+</p>
+
+<h2>14. Restrição ao Menor e ao Adolecente</h2>
+
+<p>
+  Você deverá ser maior de 18 anos de idade para utilizar nosso site e nossos
+  serviços. Se você não atender a este requisito, é imperativo que suspenda o
+  acesso.
+</p>
+
+<p>
+  Menores somente poderão utilizar nossos serviços e acessar o website sob
+  supervisão dos pais ou guardiões legais. Ao permitir menores de idade
+  utilizarem o website e serviços, os pais e/ou guardiões legais concordam em
+  estar vinculados a estes termos.
+</p>
+
+<h2>15. Limites de Responsabilidade</h2>
+
+<p>
+  Nos limites permitidos pela lei, a Clínica Olimpo, seus afiliados, empregados
+  e representantes não serão responsabilizados, direta ou indiretamente, por
+  qualquer dano causado de forma indireta, acidental, por quaisquer formas
+  especiais ou regulares, sejam estes danos pessoais, perdas ou lucro cessante,
+  seja por meios diretos ou indiretos, relacionados a qualquer perda de dados,
+  uso indevido, ou quaisquer outras utilizações em boa fé ou outras formas
+  intangíveis, resultantes em:
+</p>
+
+<ul>
+  <li>
+    Formas individuais de uso ou impossibilidade de uso dos nossos serviços;
+  </li>
+  <li>
+    Acessos não autorizados a informações armazenadas nos nossos servidores;
+  </li>
+  <li>Erros ou omissões em qualquer conteúdo disponibilizado;</li>
+  <li>
+    Utilização indevida de informações disponibilizadas pelo website, e-mail ou
+    outros meios de comunicação e transmissão;
+  </li>
+  <li>Outros meios através do acesso indevido dos nossos serviços.</li>
+</ul>
+
+<h2>16. Mudanças Nestes Termos</h2>
 
 <p>
   Nós podemos atualizar nossos Termos e Condições a qualquer momento. Nós iremos
   notificar você de quaisquer mudanças publicando os novos Termos e Condições
   nesta página. As mudanças serão efetivas imediatamente após a sua publicação.
-</p>
-
-<h2>9. Veracidade de Dados</h2>
-
-<p>
-  O usuário é o responsável pela veracidade, precisão e exatidão dos dados
-  providos através do website ou qualquer outro meio de contato que sejam
-  necessários para a prestação de serviço, sendo o usuário responsável por
-  quaisquer erros ou equívocos na prestação dos serviços em virtude de erros ou
-  omissões dos dados enviados pelo usuário.
 </p>
 
 <p>
@@ -160,7 +308,14 @@
   compromisso de atualizar os materiais.
 </p>
 
-<h2>10. Entre em Contato Conosco</h2>
+<h2>17. Aplicabilidade da Legislação</h2>
+
+<p>
+  Estes Termos e Condições são regidos e constuídos em conformidade com as leis
+  brasileiras e internacionais, sem conflito às provisões da legislação.
+</p>
+
+<h2>18. Entre em Contato Conosco</h2>
 
 <p>
   Se você tiver quais quer dúvidas relativas a estes Termos e Condições, por
@@ -173,11 +328,13 @@
   <li>Telefone: +55 (31) 9 9603-0423</li>
 </ul>
 
-<hr />
+<p>
+  Ao utilizar nossos serviços e nosso website, você concorda que leu, entendeu e
+  concordou em estar vinculados a estes Termos e Condições.
+</p>
+
 <p>
   Clínica Olimpo <br />
   Clínica de Nutrologia, Performance Esportiva e Emagrecimento. <br />
   www.clinicaolimpo.com <br />
 </p>
-
-<hr />
