Change name schedule to appointment

--- a/client/pages/appointments.html
+++ b/client/pages/appointments.html
@@ -7,13 +7,13 @@
   <table id="calendar">
     <thead>
       <tr>
-        <th>Sun</th>
-        <th>Mon</th>
-        <th>Tue</th>
-        <th>Wed</th>
-        <th>Thu</th>
-        <th>Fri</th>
-        <th>Sat</th>
+        <th>Dom</th>
+        <th>Seg</th>
+        <th>Ter</th>
+        <th>Qua</th>
+        <th>Qui</th>
+        <th>Sex</th>
+        <th>Sab</th>
       </tr>
     </thead>
     <tbody id="calendarBody">
@@ -22,9 +22,9 @@
   </table>
 </div>
 <div class="time-selection">
-  <label for="time">Select Time:</label>
+  <label for="time">Selecione o horário:</label>
   <input type="time" id="time" />
 </div>
 
 <!--internal javascript-->
-<script src="../modules/schedule.js"></script>
+<script src="../modules/appointment.js"></script>
