--- a/client/index.html
+++ b/client/index.html
@@ -10,30 +10,41 @@
       content="Clínica de Nutrologia - Bem-estar, Performance e Emagrecimento."
     />
 
-    <!--stylesheets css-->
+    <!-- Stylesheets CSS -->
     <link
       rel="stylesheet"
       type="text/css"
       media="screen"
       href="./styles/reset.css"
     />
-    <link rel="stylesheet" type="text/css" media="screen" href="./styles.css" />
 
-    <!--external fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="./styles.css" />
+
+    <!-- Javascript-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+      defer
+    ></script>
     <script
       defer
       src="https://kit.fontawesome.com/d62d22b3b2.js"
       crossorigin="anonymous"
     ></script>
-    <script defer src="./assets/frame/bootstrap.min.js"></script>
-
-    <!--internal javascript-->
     <script type="module" src="main.js" defer></script>
   </head>
 
