Improving (trying) routes and creating (trying) cookies

--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
   <body>
     <header class="header-container">
       <div class="header--logo">
-        <a href="#" data-nav-target="./pages/home.html" class="nav-page">
+        <a href="#" data-nav-target="home" class="nav-page">
           <img
             src="./assets/images/logo-white.png"
             alt="Logo"
@@ -63,7 +63,7 @@
         <ul>
           <li>
             <button
-              data-nav-target="./pages/registration.html"
+              data-nav-target="registration"
               type="button"
               class="btn btn-primary nav--user-register nav-page"
             >
@@ -72,16 +72,16 @@
           </li>
           <li>
             <button
-              data-nav-target="./pages/authentication.html"
+              data-nav-target="login"
               type="button"
-              class="btn btn-outline-primary nav--user-enter nav-page"
+              class="btn btn-outline-primary nav--user-login nav-page"
             >
               Entrar
             </button>
           </li>
           <li>
             <a
-              data-nav-target="./pages/profile.html"
+              data-nav-target="profile"
               class="nav--user-logged nav-page"
               href="#"
               ><i class="fa-solid fa-user"></i> <span>Nome usuário</span></a
@@ -89,7 +89,7 @@
           </li>
           <li>
             <a
-              data-nav-target="./pages/cart.html"
+              data-nav-target="cart"
               class="nav--user-cart nav-page"
               href="#"
               ><i class="fa-solid fa-cart-shopping"></i
@@ -102,7 +102,7 @@
     <nav class="nav--menu">
       <ul>
         <li>
-          <a href="#" data-nav-target="./pages/home.html" class="nav-page">
+          <a href="#" data-nav-target="home" class="nav-page">
             <span class="nav--menu-icon"
               ><i class="fa-solid fa-house"></i
             ></span>
@@ -110,7 +110,7 @@
           </a>
         </li>
         <li>
-          <a href="#" data-nav-target="./pages/services.html" class="nav-page">
+          <a href="#" data-nav-target="services" class="nav-page">
             <span class="nav--menu-icon"
               ><i class="fa-solid fa-stethoscope"></i
             ></span>
@@ -120,7 +120,7 @@
         <li>
           <a
             href="#"
-            data-nav-target="./pages/appointments.html"
+            data-nav-target="appointments"
             class="nav-page"
           >
             <span class="nav--menu-icon"
@@ -130,13 +130,13 @@
           </a>
         </li>
         <li>
-          <a href="#" data-nav-target="./pages/files.html" class="nav-page">
+          <a href="#" data-nav-target="files" class="nav-page">
             <span class="nav--menu-icon"><i class="fa-solid fa-file"></i></span>
             <span class="nav--menu-text">Documentos</span>
           </a>
         </li>
         <li>
-          <a href="#" data-nav-target="./pages/contact.html" class="nav-page">
+          <a href="#" data-nav-target="contact" class="nav-page">
             <span class="nav--menu-icon"
               ><i class="fa-solid fa-message"></i
             ></span>
@@ -152,7 +152,7 @@
 
     <footer class="footer-container">
       <div class="footer--logo">
-        <a href="#" data-nav-target="./pages/home.html" class="nav-page">
+        <a href="#" data-nav-target="home" class="nav-page">
           <img
             src="./assets/images/logo-dark.png"
             alt="Logo"
@@ -171,7 +171,7 @@
       <nav class="footer--nav">
         <ul>
           <li>
-            <a href="#" data-nav-target="./pages/terms.html" class="nav-page"
+            <a href="#" data-nav-target="terms" class="nav-page"
               >Termos e Condições</a
             >
           </li>
