Finishing navigation in appointment availability and list

--- a/client/pages/appointments.html
+++ b/client/pages/appointments.html
@@ -27,7 +27,7 @@
   
     </form>
     <form class="appointments-new--display" id="appointmentNewForm">
-      <div class="alert alert-primary buthidden" id="noAvailabilityMessage" role="alert">
+      <div class="alert alert-primary buthidden" id="availabilityMessage" role="alert">
         Sem horários disponíveis para a seleção.
       </div>
       <div id="appointmentNewList">
