--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,13 @@
       src="https://kit.fontawesome.com/d62d22b3b2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js"
+    ></script>
     <script type="module" src="main.js" defer></script>
   </head>
 
